--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@ NODE_ENV = 'zyn'
 VUE_APP_CONTEXT_PATH = '/wx-cp-invoice/'
 # 只有以 VUE_APP_ 开头的变量会被 webpack.DefinePlugin 静态嵌入到客户端侧的包中
 VUE_APP_WX_ID=ace1f960-e82a-40c9-b4f6-f4d40b7189ea
-VUE_APP_BASE_URL = http://40.177.36.19:8080
+VUE_APP_BASE_URL = https://b245c71a-8080-app.lightly.teamcode.com/
